--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,16 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+    models:
+      stock: 在庫
+    attributes:
+      task:
+        id: ID
+        name: 在庫名
+        stock: 在庫数
+        unit: 単位
+        created_at: 登録日時
+        updated_at: 更新日時
   date:
     abbr_day_names:
     - 日
