rails-i18nというgemをインストしてエラーを日本語化した。

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,7 +10,7 @@ ja:
     models:
       stock: 在庫
     attributes:
-      task:
+      stock:
         id: ID
         name: 在庫名
         stock: 在庫数
