--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -13,7 +13,7 @@ ja:
       stock:
         id: ID
         name: 在庫名
-        stock: 在庫数
+        stock: 個数
         unit: 単位
         created_at: 登録日時
         updated_at: 更新日時
